--- a/VISE_app/templates/returnLinks.html
+++ b/VISE_app/templates/returnLinks.html
@@ -82,6 +82,7 @@
                             <div class="col-5 feature-box">
                                 CSV
                                 <ul>
+                                    <!-- invoke exportCSV() giving the CSV path as argument --> 
                                     <li class="elencopuntato"><i class="fas fa-file-csv"  style="font-size:24px;color:mediumseagreen; margin-right: 0.25em;"></i><a href="{{ url_for('.exportCSV') }}?csv_name={{ csvLink }}" style="color: #007bff;">Export CSV</a></li>
                                 </ul>
                             </div>
