--- a/VISE_app/templates/searchingCard.html
+++ b/VISE_app/templates/searchingCard.html
@@ -30,6 +30,7 @@
 
         <script>
             function uploadFunction(){
+                // change name displayed in labelFile element
                 document.getElementById("labelFile").innerHTML = document.getElementById("myFile").files[0].name; 
             }
         </script>
@@ -76,10 +77,12 @@
                         <div class="card-header"><h4 class="card-title text-info" style="margin-bottom: 0;"><i id = uploadIconTitle class="icon-folder-alt icon text-info" style="margin-right: 0.5em;"></i>Import Searching Card</h4></div>
                         <div class="card-body">
                             <p class="card-text">Click the button below to upload the searching card.<br>As a result of the uploading of the searching card, some links will be shown to view the analysis results graphically.</p>    
+                            <!-- if input element of type="submit" is clicked, we make a POST -->
                             <form action = "{{ url_for('.returnLinks') }}" method = "POST" enctype = "multipart/form-data">
                                 <div class="form-group">
                                     <div class="input-group mb-3">
                                     <div class="custom-file">
+                                        <!-- input element to upload searchingCard. if a new file is uploaded invoke uploadFunction() -->
                                         <input type="file" id="myFile" name="searchingCard" class="custom-file-input" onchange="uploadFunction()">
                                         <label id="labelFile" class="custom-file-label">Choose file</label>
                                     </div>
