--- a/VISE_app/templates/searchingCard.html
+++ b/VISE_app/templates/searchingCard.html
@@ -76,7 +76,7 @@
                     <div class="col-md-5 feature-box card bg-light border-info mb-3">
                         <div class="card-header"><h4 class="card-title text-info" style="margin-bottom: 0;"><i id = uploadIconTitle class="icon-folder-alt icon text-info" style="margin-right: 0.5em;"></i>Import Searching Card</h4></div>
                         <div class="card-body">
-                            <p class="card-text">Click the button below to upload the searching card.<br>As a result of the uploading of the searching card, some links will be shown to view the analysis results graphically.</p>    
+                            <p class="card-text">Click the button below to upload the searching card.</p>    
                             <!-- if input element of type="submit" is clicked, we make a POST -->
                             <form action = "{{ url_for('.returnLinks') }}" method = "POST" enctype = "multipart/form-data">
                                 <div class="form-group">
@@ -105,7 +105,7 @@
                                 <button id="submitButton" type="button" class="btn btn-primary">DOWNLOAD</button>
                             </a> 
                             <p></p>
-                            <p class="card-text">If you want to create your own searching card be carefull, you must specify at least the green fields in the image: package and version.<br>A correct example of a searching card is the following.</p>
+                            <p class="card-text">If you want to create your own searching card be careful, you must specify at least the green fields in the image.<br>A correct example of a searching card is the following.</p>
                             <img class="card-img-top w-100 d-block" src="static/scenery/searching_card.png"/>
                         </div>
                     </div>
